<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_login"
        tools:context=".formLogin"
        android:id="@+id/tela">

<!--login de teste: teste@teste senha 1234-->
        <ImageView
            android:id="@+id/logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/logo"
            android:layout_marginTop="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/logo"
            android:tint="@color/Purple"
            tools:ignore="UseAppTint" />

        <View
            android:id="@+id/ContainerLoginComponents"
            style="@style/ContainerLoginComponents"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo"/>

        <View
            android:id="@+id/unfocus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="SpeakableTextPresentCheck" />

        <EditText

            style="@style/textComponents"
            android:id="@+id/email"
            android:hint="@string/e_mail"
            android:drawableRight="@drawable/ic_baseline_mail_24"
            android:drawableTint="@color/Gray_back"
            app:layout_constraintStart_toStartOf="@id/ContainerLoginComponents"
            app:layout_constraintStart_toEndOf="@id/ContainerLoginComponents"
            app:layout_constraintTop_toTopOf="@id/ContainerLoginComponents"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress"/>

        <EditText

            style="@style/textComponents"
            android:id="@+id/senha"
            android:hint="@string/senha"
            android:drawableRight="@drawable/ic_baseline_remove_red_eye_24"
            android:drawableTint="@color/Gray_back"
            app:layout_constraintStart_toStartOf="@id/ContainerLoginComponents"
            app:layout_constraintStart_toEndOf="@id/ContainerLoginComponents"
            app:layout_constraintTop_toBottomOf="@id/email"
            android:autofillHints="password"
            android:inputType="textPassword" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/BTNComponents"
            android:id="@+id/BTNlogin"
            android:text="@string/login"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="@id/ContainerLoginComponents"
            app:layout_constraintStart_toEndOf="@id/ContainerLoginComponents"
            app:layout_constraintTop_toBottomOf="@id/senha"
            />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:indeterminateTint="@color/Gray_dark"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:visibility="invisible"
            />

        <TextView
            android:id="@+id/tela_cadastro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/cadastro"
            android:textColor="@color/White_text"
            android:textSize="15dp"
            android:clickable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ContainerLoginComponents"
            tools:ignore="TextSizeCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>