<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".formCadastro"
        android:background="@drawable/background_login">


        <TextView
            android:id="@+id/dica_senha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/regrasSenha"
            android:textColor="@color/Gray_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAlignment="center"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            app:layout_constraintTop_toBottomOf="@id/ContainerLoginComponents"
            android:layout_marginBottom="16dp" />

        <View
            android:id="@+id/ContainerLoginComponents"
            style="@style/ContainerLoginComponents"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <View
            android:id="@+id/unfocus"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:clickable="true"
            android:focusable="true" />

        <EditText

            style="@style/textComponents"
            android:id="@+id/UserN"
            android:hint="@string/usuario"
            android:drawableRight="@drawable/ic_baseline_person_24"
            android:drawableTint="@color/Gray_back"
            app:layout_constraintStart_toStartOf="@id/ContainerLoginComponents"
            app:layout_constraintStart_toEndOf="@id/ContainerLoginComponents"
            app:layout_constraintTop_toTopOf="@id/ContainerLoginComponents"
            android:autofillHints="username"
            android:inputType="textNoSuggestions"/>

        <EditText

            style="@style/textComponents"
            android:id="@+id/email"
            android:hint="@string/e_mail"
            android:drawableRight="@drawable/ic_baseline_mail_24"
            android:drawableTint="@color/Gray_back"
            app:layout_constraintStart_toStartOf="@id/ContainerLoginComponents"
            app:layout_constraintStart_toEndOf="@id/ContainerLoginComponents"
            app:layout_constraintTop_toBottomOf="@id/UserN"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress"/>

        <EditText

            style="@style/textComponents"
            android:id="@+id/C_email"
            android:hint="@string/C_e_mail"
            android:drawableRight="@drawable/ic_baseline_mail_24"
            android:drawableTint="@color/Gray_back"
            app:layout_constraintStart_toStartOf="@id/ContainerLoginComponents"
            app:layout_constraintStart_toEndOf="@id/ContainerLoginComponents"
            app:layout_constraintTop_toBottomOf="@id/email"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress"/>

        <EditText

            style="@style/textComponents"
            android:id="@+id/senha"
            android:hint="@string/senha"
            android:drawableRight="@drawable/ic_baseline_remove_red_eye_24"
            android:drawableTint="@color/Gray_back"
            app:layout_constraintStart_toStartOf="@id/ContainerLoginComponents"
            app:layout_constraintStart_toEndOf="@id/ContainerLoginComponents"
            app:layout_constraintTop_toBottomOf="@id/C_email"
            android:autofillHints="password"
            android:inputType="textPassword" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/BTNComponents"
            android:id="@+id/BTNCadastro"
            android:text="Cadastrar!"
            app:layout_constraintStart_toStartOf="@id/ContainerLoginComponents"
            app:layout_constraintStart_toEndOf="@id/ContainerLoginComponents"
            app:layout_constraintTop_toBottomOf="@id/dica_senha"
            />





    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>