<LinearLayout
    android:id="@+id/LL"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            tools:context=".ConversasChat"
            android:layout_weight="0">

            <View
                android:id="@+id/navbar"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/NewPurple"
                android:foregroundGravity="top"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText

                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:fontFamily="@font/roboto_black"
                android:autofillHints="Mensagem para mandar para o Bot"
                android:background="@drawable/edittext_no_underline"
                android:gravity="center"
                android:inputType="textAutoComplete"
                android:text="@string/titulo"
                android:textColor="@color/White_text"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@id/navbar"
                app:layout_constraintEnd_toEndOf="@id/navbar"
                app:layout_constraintStart_toStartOf="@id/navbar"
                app:layout_constraintTop_toTopOf="@id/navbar"
                app:layout_constraintWidth_percent="0.5"
                tools:ignore="LabelFor" />

            <ImageButton
                android:id="@+id/imgSidebar"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@color/NewPurple"
                android:contentDescription="@string/back_to_conversas"
                android:src="@drawable/ic_back_arrow"
                app:layout_constraintStart_toStartOf="@id/navbar"
                app:layout_constraintTop_toTopOf="@id/navbar"
                tools:ignore="SpeakableTextPresentCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:id="@+id/SV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_login"
            android:layout_weight="1">
            <LinearLayout
                android:id="@+id/textLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            </LinearLayout>
        </ScrollView>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_login"
            tools:context=".ConversasChat"
            android:layout_weight="0">
            <View
                android:id="@+id/EndBar"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_alignParentBottom="true"
                android:background="@color/NewPurple"
                android:elevation="1dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/message_input"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginTop="5dp"
                android:background="@color/Gray_back2"
                android:elevation="10dp"
                android:gravity="center_vertical"
                android:hint="@string/digite_a_sua_mensagem"
                android:padding="8dp"
                android:textColor="@color/White_text"
                android:textColorHint="#78909C"
                android:textSize="18sp"
                android:drawableRight="@drawable/baseline_send_24"


                app:layout_constraintBottom_toBottomOf="@id/EndBar"
                app:layout_constraintEnd_toEndOf="@id/EndBar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/EndBar"
                app:layout_constraintWidth_percent="0.93"
                android:autofillHints="Texto para enviar para o BOT"
                android:inputType="textAutoComplete" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

